
Default busy status to OPAQUE if not given. Thanks to, yes, Aurelien Bompard.

17/09/2009 - Mark Ellis
-----------------------
Allow any case in type attribute of ADR tag, from Aurelien Bompard.

18/09/2009 - Aurelien Bompard
-----------------------------
Refactor the contact XSL stylesheets to use templates. Add many unit tests.

Small addition to the DTPT debug log

21/09/2009 - Aurelien Bompard
-----------------------------
Refactor the event XSL stylesheets to use templates.

02/12/2009 - Mark Ellis
-----------------------
Close some forgotten file descriptors in DTPTThread.

12/12/2009 - Mark Ellis
-----------------------
Due to some cases of either Activesync partnerships masquerading as server
sources, or server sources with matching registry entries (hey, it's M$ !),
we now check for matching registry entries for server sources.

22/12/2009 - Mark Ellis
-----------------------
Ignore unknown sync provider types, instead of abandoning.

26/04/2010 - Mark Ellis
-----------------------
Add MANIFEST.in for creating distribution.

26/04/2010 - Mark Ellis
-----------------------
0.15 release

24/07/2010 - Mark Ellis
-----------------------
Fix bug in 0.2x plugin in use of osync_context.report_error

01/09/2010 - Mark Ellis
-----------------------
Use new udev based dccm

12/02/2011 - Mark Ellis
-----------------------
0.15.1 release

02/08/2012 - Mark Ellis
-----------------------
Remove obsolete Hal code

06/08/2012 - Mark Ellis
-----------------------
convert some print statements for error messages to use logger

10/08/2012 - Mark Ellis
-----------------------
correct setting of objformat
use python module opensync1 instead of opensync

17/08/2012 - Mark Ellis
-----------------------
Opensync python plugin has become an external module in 0.3x,
modify our plugin to match

21/08/2012 - Mark Ellis
-----------------------
* SyncEngine/formats30/contact-from-airsync.xsl - re-order
  FirstName and LastName elements for opensync